services/backdoor/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backdoor
  labels:
    app: backdoor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backdoor
  template:
    metadata:
      labels:
        app: backdoor
    spec:
      containers:
        - name: backdoor
          image: us-docker.pkg.dev/cloudgrep/cloudgrep-images/backdoor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
